CKAD/lightning-lab-1/redis-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
        nodeName: master
        containers:
        - name: redis
          image: redis:alpine
          ports:
          - containerPort: 6379
          resources:
            requests:
              cpu: "0.2"
          volumeMounts:
          - name: redis-config 
            mountPath: /redis-master
          - name: data 
            mountPath: /redis-master-data
        volumes:
        - name: redis-config
          configMap:
            name: redis-config
        - name: data
          emptyDir: {}
