CKAD/lightning-lab-1/time-check.yaml
apiVersion: v1
kind: Pod
metadata:
  name: time-check
  namespace: dvl1987
  labels:
    name: time-check
spec:
  containers:
  - name: time-check
    image: busybox
    command: ['sh', '-c', 'while true; do date; sleep $TIME_FREQ;done >> /opt/time/time-check.log']
    volumeMounts:
    - mountPath: /opt/time/
      name: time-check-volume
  volumes:
    - name: time-check-volume
      emptyDir: {}
